--- a/week_1.ipynb
+++ b/week_1.ipynb
@@ -46,7 +46,7 @@
     "    - 인간이 원하는 것을 컴퓨터에게 명령할 때 쓰는 컴퓨터가 이해할 수 있는 언어\n",
     "\n",
     "## 파이썬\n",
-    "    - 왜 배우는가? 쉽고 간결하고, 라이브러리가 많아서."
+    "    - 왜 배우는가? 쉽고 간결하고, 라이브러리가 많기 때문에 배움."
    ]
   },
   {
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "type('apple') #따옴표 없이 쓰면 변수명으로 인식되어서 에러남!"
+    "type('apple') #따옴표 없이 쓰면 변수명으로 인식되어서 에러남"
    ]
   },
   {
@@ -358,8 +358,8 @@
    "source": [
     "### 변수명 정하기\n",
     "- 나쁜 변수명: 의미없는 a, b, c, a1, b1 등등\n",
-    "- 코딩은 나를 위한 게 아니라 남을 위한 거라 남이 이해하고 확인 할 수 있게!\n",
-    "- 의미있는 이름으로 선언하는 게 룰\n",
+    "- 코딩은 나를 위한 게 아니라 남을 위한 거라 남이 이해하고 확인 할 수 있도록 해야함\n",
+    "- 의미있는 이름으로 선언하는 게 규\n",
     "- 소문자, 대문자, 숫자, 언더바 사\n",
     "    예: name, name2, my_name, Name, NAME"
    ]
@@ -446,7 +446,7 @@
     "    - 전체 대문자인 변수명: NAME\n",
     "    \n",
     "- 용도를 모르면 약속된 것들이 있으니까 그냥 쓰지 말기\n",
-    "    - name! a_b_c_____99 이런거 쓰지 말아라"
+    "    - name! a_b_c_____99 이런 쓰지 않기"
    ]
   },
   {
